chore: update tmux config

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,11 +1,6 @@
-# Enable 256 color support
-set -g default-terminal "screen-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
-
-# Change prefix from 'Ctrl+b' to 'Ctrl+a'
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix C-space
+bind-key C-space send-prefix
 
 # Start window numbering at 1
 set -g base-index 1
@@ -16,9 +11,6 @@ set -g renumber-windows on
 
 # Increase scrollback buffer size
 set -g history-limit 50000
-
-# Enable mouse support
-set -g mouse on
 
 # Vi mode
 setw -g mode-keys vi
@@ -65,9 +57,6 @@ set -g status-right "#[fg=colour243]#H #[fg=colour4,bold]%H:%M "
 # Window status
 setw -g window-status-format "#[fg=colour243] #I #W "
 setw -g window-status-current-format "#[fg=colour4,bold] #I #W "
-
-# Enable true color support
-set -sa terminal-features ',xterm-256color:RGB'
 
 # Set escape time to 0
 set -sg escape-time 0
