--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -65,5 +65,12 @@ set -sg escape-time 0
 setw -g monitor-activity on
 set -g visual-activity off
 
-# Set default directory for plugins
-set-environment -g TMUX_PLUGIN_MANAGER_PATH './plugins'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'spywhere/tmux-named-snapshot'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'thepante/tmux-git-autofetch'
+
+run '~/.tmux/plugins/tpm/tpm'
